--- a/client-scaffolding/app/styles.css
+++ b/client-scaffolding/app/styles.css
@@ -1,9 +1,31 @@
 #chirpWidget {
-    height: 200px;
+    height: 135px;
     width: 400px;
 }
 
 #chirpForm {
     height: 175px;
     width: inherit;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+/*List Page  */
+#list-page {
+    margin: 6em;
+}
+
+.list-container {
+    border: 2px solid lightblue;
+    background-color: lightblue;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+#list-heading {
+    height: 6em;
+    width: 20em;
 }
