--- a/client-scaffolding/views/list.html
+++ b/client-scaffolding/views/list.html
@@ -1,4 +1,15 @@
-<div>
-    {{ chirp.name }}
-    {{ chirp.body }}
+<div id="list-page">
+    <div class = "center col-lg-4" id="list-heading">
+        <h2>What the Chirp?!</h2>
+        <h4>Check out the latest chirps!</h4>
+    </div>
+
+    <div class = "col-lg-4" ng-controller="ChirpsController as chirps">
+        <div class = "center col-lg-4 list-container" ng-repeat="chirp in chirpList">
+            <p>User: {{ chirp.user }}</p>
+            <p>Chirp: {{ chirp.message }}</p>
+            {{ chirp.id}}
+        </div>
+    </div>
 </div>
+
