--- a/client/views/list.html
+++ b/client/views/list.html
@@ -8,6 +8,7 @@
         <div class = "center col-lg-4 list-container" ng-repeat="chirp in chirpList">
             <p>User: {{ chirp.user }}</p>
             <p>Chirp: {{ chirp.message }}</p>
+            <button href="#/single" id = {{chirp.id}}>View</button>
             {{ chirp.id}}
         </div>
     </div>
