--- a/client/views/single.html
+++ b/client/views/single.html
@@ -3,8 +3,8 @@
 
 <div class = "col-lg-4" ng-controller="SingleController">
     <div class = "center col-lg-4 list-container">
-        <p>User: {{ chirp.user }}</p>
-        <p>Chirp: {{ chirp.message }}</p>
+        <p>User: {{ chirps.user }}</p>
+        <p>Chirp: {{ chirps.message }}</p>
         <button>Delete</button>
         {{ chirp.id }}
     </div>
