--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,1 +1,5 @@
-<h1>hello</h1>
+<div class="center primary-text">
+    <h1 class="landing-text">Welcome to Chirper!</h1>
+</div>
+<div class="landing">
+</div>
