--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,5 +1,6 @@
 <div class="center primary-text">
-    <h1 class="landing-text">Welcome to Chirper!</h1>
+    <h1 class="landing-text center">Welcome to Chirper!</h1>
+    <a ng-href="#/list"><h2>Check Out The Latest Twwe...Chirps</h2></a>
 </div>
 <div class="landing">
 </div>
